--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Instagram clone">
@@ -151,9 +151,9 @@
             <img src="dog.jpg" id="dog" alt="Dog" title="Dog" class="responsive">
         </div>
         <div class="picicons">
-            <i class="fa fa-heart" id="heart"></i>
-            <i class="fa fa-comment" id="comment"></i>
-            <i class="fa fa-share" id="share"></i>
+            <i class="fa fa-heart" id="heart2"></i>
+            <i class="fa fa-comment" id="comment2"></i>
+            <i class="fa fa-share" id="share2"></i>
         </div>
         <div class="saveicon">
             <i class="fa fa-bookmark"></i>
